--- a/templates/login.html
+++ b/templates/login.html
@@ -29,6 +29,7 @@
         <form method = "POST" >
           <input type="text" id="login" class="fadeIn second" name="username" placeholder="login">
           <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
+          <!-- サーバーへフォームを送信する -->
           <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
     
