--- a/templates/index.html
+++ b/templates/index.html
@@ -102,10 +102,11 @@
                     <h3>出力結果...</h3>
                     <BR>
                     <h4>
-                        尿細管の高さは {{result}} です<BR><BR>
+                        尿細管の高さは <B>{{result}}</B> です<BR>
+                        近位尿細管個数は<B>{{ tubele_n }}</B>です<BR><BR>
                         
                         左図はアップロード画像<BR>
-                        右図はthreshold={{sure_fig_p}}の輪郭描出画像。<BR>
+                        右図はthreshold=<B>{{sure_fig_p}}</B>の輪郭描出画像。<BR>
                     </h4>
                 </div>
             </div>
