--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
     
         <!-- Icon -->
         <div class="fadeIn first">
-          <img src="./static/kitasato.jpeg" id="icon" alt="User Icon" />
+          <img src="./static/jitudo.png" id="icon" alt="User Icon" />
         </div>
     
         <!-- Login Form -->
