--- a/templates/index2.html
+++ b/templates/index2.html
@@ -10,7 +10,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css')}}">
     <!------ Include the above in your HEAD tag ---------->
-    <title>尿細管AI</title>
+    <title>尿細管AI2</title>
 </head>
 <header>
     <h1 class="alert alert-primary " role="alert">尿細管AI</h1>
